# pandoc_static_katex

./: pyproject.toml
