[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "pandoc_static_katex"
author = "Zahari Kassabov"
author-email = "zk261@cam.ac.uk"
home-page = "https://github.com/Zaharid/pandoc_static_katex"
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python=">3.7"
requires=["pandocfilters"]
description-file="README.md"

[tool.flit.scripts]
pandoc-static-katex = "pandoc_static_katex:main"
